<resources>
    <string name="app_name">fitneXt_App</string>
    <string name="fitne">Fitne</string>
    <string name="x">X</string>
    <string name="t">t</string>
    <string name="make_fitness_a_habit">Make Fitness A Habit</string>
    <string name="activity_2_text">ACTIVITY 2</string>
    <string name="track_your_goal">Track Your Goal</string>
    <string name="get_burn">Get Burn</string>
    <string name="round_button_onboarding_button">round button onboarding</string>
    <string name="buttonforonboarding">buttonforonboarding</string>
    <string name="button2"><![CDATA[>]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="you_are_all_set_now_let_s_reach_your_goals_together_with_us">You are all set now, let’s reach your goals together with us</string>
    <string name="go_to_home_button">go to home</string>
    <string name="x_x">X</string>
    <string name="welcome_text">Welcome!</string>
    <string name="noedgebg">noedgebg</string>
    <string name="start">Start</string>
    <string name="workout_now">Workout Now!</string>
    <string name="sign_in_txt">SIGN IN</string>
    <string name="email_txt">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="welcome_sign_up_to_continue">Welcome,Sign Up to Continue</string>
    <string name="already_registered_login">Already Registered?Login</string>
    <string name="not_registered_sign_up">Not Registered? Sign Up</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_the_email_you_forgot_the_password">Enter the email you forgot the Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="exit">Exit</string>
    <string name="splashimage">splashimage</string>
    <string name="log_out">log out</string>
    <string name="shoulder">SHOULDER</string>
    <string name="choose_your_target">CHOOSE YOUR TARGET</string>
    <string name="calves">Calves</string>
    <string name="chest">Chest</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="triceps">Triceps</string>
    <string name="biceps">Biceps</string>
    <string name="forearms">Forearms</string>
    <string name="trapezius">Trapezius</string>
    <string name="abs">Abs</string>
    <string name="logoutandexit">logoutandexit</string>
    <string name="chose_target">CHOSE TARGET</string>
    <string name="track_your_goals">TRACK YOUR GOAL</string>
    <string name="get_burnt">GET BURN</string>
    <string name="sleep_qualiti">SLEEP QUALITY</string>
    <string name="sign_up_to_continue">Sign up to Continue</string>
    <string name="sign_upS">SIGN UP</string>
    <string name="intermediate">Intermediate</string>
    <string name="beginner">Beginner</string>
    <string name="advance">Advance</string>
    <string name="select_difficulty">SELECT DIFFICULTY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test</string>
    <string name="test23232">test</string>
    <string name="fitnext">FitneXt</string>
    <string name="logo">logo</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Advance">Advance</string>
    <string name="select_difficulty1">SELECT DIFFICULTY</string>
    <string name="beginner1">Beginner</string>
    <string name="ex4">ex4</string>
    <string name="exercise1">Exercise1</string>
    <string name="exercise2">Exercise2</string>
    <string name="exercise3">Exercise3</string>
    <string name="exercise4">Exercise4</string>
    <string name="exercise5">Exercise5</string>
    <string name="beginner11">beginner1</string>
    <string name="beginner2">beginner2</string>
    <string name="beginner3">beginner3</string>
    <string name="beginner4">beginner4</string>
    <string name="beginner5">beginner5</string>
    <string name="intermediate1">Intermediate1</string>
    <string name="intermediate2">Intermediate2</string>
    <string name="intermediate3">Intermediate3</string>
    <string name="intermediate4">Intermediate4</string>
    <string name="intermediate5">Intermediate5</string>
    <string name="advance1">Advance1</string>
    <string name="advance2">Advance2</string>
    <string name="advance3">Advance3</string>
    <string name="advance4">Advance4</string>
    <string name="advance5">Advance5</string>
    <string name="dumbbell_front_raise">Dumbbell Front Raise</string>
    <string name="dumbbell_lateral_raise">Dumbbell Lateral Raise</string>
    <string name="reverse_fly">Reverse Fly</string>
    <string name="standing_dumbbell_shoulder_press">Standing Dumbbell Shoulder Press</string>
    <string name="one_arm_dumbbell_push_press">One-Arm Dumbbell Push Press</string>
    <string name="barbell_overhead_press">Barbell Overhead Press</string>
    <string name="push_press">Push Press</string>
    <string name="arnold_press">Arnold Press</string>
    <string name="leaning_lateral_raise">Leaning Lateral Raise</string>
    <string name="incline_y_raise">Incline Y Raise</string>
    <string name="cable_shrug">Cable Shrug</string>
    <string name="single_arm_face_pull">Single Arm Face Pull</string>
    <string name="dumbbell_lateral_raise_w_iso_hold">Dumbbell Lateral Raise w/Iso Hold</string>
    <string name="butterfly_rear_deltoid">Butterfly – Rear Deltoid</string>
    <string name="Start">Start</string>
    <string name="Info">Info</string>
    <string name="dumbbell_farmer_s_walk">Dumbbell Farmer’s Walk</string>
    <string name="hex_bar_deadlift">Hex Bar Deadlift</string>
    <string name="barbell_farmer_s_walk">Barbell Farmer’s Walk</string>
    <string name="push_press1">Push Press</string>
    <string name="power_shrug">Power Shrug</string>
    <string name="hang_clean_and_hang_snatch">Hang Clean and Hang Snatch</string>
    <string name="overhead_squat">Overhead Squat</string>
    <string name="barbell_squats">Barbell Squats</string>
    <string name="suspension_trainer_y_raise">Suspension Trainer Y-Raise</string>
    <string name="rack_pulls">Rack Pulls</string>
    <string name="shoulder_blade_squeeze">Shoulder Blade Squeeze</string>
    <string name="push_up">Push Up</string>
    <string name="snatch_grip_deadlift">Snatch Grip Deadlift</string>
    <string name="overhead_barbell_carry">Overhead Barbell Carry</string>
    <string name="seated_overhead_dumbbell_extension">Seated Overhead Dumbbell Extension</string>
    <string name="standing_triceps_kickbacks">Standing Triceps Kickbacks</string>
    <string name="bench_dip">Bench Dip</string>
    <string name="push_up2">Push Up</string>
    <string name="triceps_stretch">Triceps Stretch</string>
    <string name="skull_crusher">Skull Crusher</string>
    <string name="triceps_pullover">Triceps Pullover</string>
    <string name="dive_bombers">Dive-bombers</string>
    <string name="triceps_pressdown">Triceps Pressdown</string>
    <string name="isolated_triceps_extension">Isolated Triceps Extension</string>
    <string name="dips">Dips</string>
    <string name="close_grip_bench_press">Close-grip Bench Press</string>
    <string name="dumbbell_skullcrusher">Dumbbell Skullcrusher</string>
    <string name="cable_crossover_triceps_extension">Cable Crossover Triceps Extension</string>
    <string name="the_diamond_press_up">The Diamond Press-up</string>
    <string name="decline_dumbbell_flye">Decline Dumbbell Flye</string>
    <string name="barbell_bench_press">Barbell Bench Press</string>
    <string name="medicine_ball_chest_throw">Medicine Ball Chest Throw</string>
    <string name="flat_dumbbell_bench_press">Flat Dumbbell Bench Press</string>
    <string name="decline_dumbbell_fly">Decline Dumbbell Fly</string>
    <string name="cable_crossover">Cable crossover</string>
    <string name="parallel_bar_dips">Parallel Bar Dips</string>
    <string name="band_resisted_dumbbell_flyes">Band-Resisted Dumbbell Flyes</string>
    <string name="barbell_incline_bench_press_medium_grip">Barbell Incline Bench Press Medium-Grip</string>
    <string name="chest_fly">Chest Fly</string>
    <string name="decline_cable_fly">Decline Cable Fly</string>
    <string name="weighted_dips">Weighted Dips</string>
    <string name="spoto_press">Spoto Press</string>
    <string name="dumbbell_pullover">Dumbbell PullOver</string>
    <string name="incline_press">Incline Press</string>
    <string name="dumbbell_overhead_press">DUMBBELL OVERHEAD PRESS</string>
    <string name="_3_sets_n_15_reps_n_30_seconds_rest">-3 SETS \n-10 REPS \n-30 SECONDS REST</string>
    <string name="_3_sets_n_15_reps_n_30_seconds_rest1">-3 SETS \n-15 REPS\n-30 SECONDS REST</string>
    <string name="barbell_shrug">BARBELL SHRUG</string>
    <string name="_3_sets_n_10_reps_n_30_seconds_rest">-3 SETS \n-10 REPS\n-30 SECONDS REST</string>
    <string name="barbell_upright_row">BARBELL UPRIGHT ROW</string>
    <string name="alternating_dumbbell_front_raise">ALTERNATING DUMBBELL FRONT RAISE</string>
    <string name="_3_sets_n_15_reps_n_30_seconds_rest0">-3 SETS \n-15 REPS\n-30 SECONDS REST</string>
    <string name="dumbbell_shadow_boxing">DUMBBELL SHADOW BOXING</string>
    <string name="_3_sets_n_20_reps_n_1_minute_rest">-3 SETS \n-20 REPS\n-1 MINUTE REST</string>
    <string name="dumbbell_lateral_raise1">DUMBBELL LATERAL RAISE</string>
    <string name="_3_sets_n_10_reps_n_30_seconds_rest1">-3 SETS \n-10 REPS\n-30 SECONDS REST</string>
    <string name="overhead_press">OVERHEAD PRESS</string>
    <string name="_3_sets_n_10_reps_n_1_minute_rest">-3 SETS \n-10 REPS\n-1 MINUTE REST</string>
    <string name="battle_rope_slam">BATTLE ROPE SLAM</string>
    <string name="_3_sets_n_30_seconds_n_45_seconds_rest">-3 SETS \n-30 SECONDS\n-45 SECONDS REST</string>
    <string name="medicine_ball_slam">MEDICINE BALL SLAM</string>
    <string name="_2_sets_n_15_reps_n_15_seconds_rest">-2 SETS \n-15 REPS\n-15 SECONDS REST</string>
    <string name="handstand_press_up">HANDSTAND PRESS-UP</string>
    <string name="wall_ball">WALL BALL</string>
    <string name="_2_sets_n_10_reps_n_30_seconds_rest">-2 SETS \n-10 REPS\n-30 SECONDS REST</string>
    <string name="thruster">THRUSTER</string>
    <string name="_3_sets_n_10_reps_n_1_minute_rest1">-3 SETS \n-10 REPS\n-1 MINUTE REST</string>
    <string name="_3_sets_n_15_reps_n_30_seconds_rest2">-3 SETS \n-15 REPS\n-30 SECONDS REST</string>
    <string name="_3_sets_n_15_reps_n_30_seconds_rest3">-3 SETS\n-15 REPS\n-30 SECONDS REST</string>
    <string name="shoulder_tap">SHOULDER TAP</string>
    <string name="_3_sets_n_15_reps_n_45_seconds_rest">-3 SETS\n-15 REPS\n-45 SECONDS REST</string>
    <string name="press_up">PRESS UP</string>
    <string name="_3_sets_n_10_reps_n_30_seconds_rest2">-3 SETS\n-10 REPS\n-30 SECONDS REST</string>
    <string name="distinct_workouts">Distinct Workouts</string>
    <string name="your_guide_for_your_specific_workouts">Your Guide For Your Specific Workouts</string>
</resources>