<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    tools:context=".bodyparts.HamstringEx">
    <ImageView
        android:id="@+id/hamstringarrow"
        android:layout_width="51dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_black_24" />

    <RadioGroup
        android:id="@+id/select"
        android:layout_width="411dp"
        android:layout_height="41dp"
        android:layout_marginTop="88dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/beginner"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:text="@string/beginner"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/intermediate"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/intermediate"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/advance"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:text="@string/advance"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>